# picpak-tesserae-client

./: CHANGELOG.md  README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  battpct.h  board.h  config_store.c  config_store.h  defaults.h  epd_driver.c  epd_driver.h  epd_init_seq.h  fb2bpp.c  fb2bpp.h  framebuf.c  framebuf.h  heartbeat.c  heartbeat.h  image_fetcher.c  image_fetcher.h  lowbatt.c  lowbatt.h  lowbatt_core.h  main.c  mqtt_handler.c  mqtt_handler.h  mqtt_parse.c  mqtt_parse.h  power.c  power.h  provision_form.c  provision_form.h  provisioning.c  provisioning.h  rest_handler.c  rest_handler.h  secrets.example.h  secrets.h  splash.c  splash.h  wifi_manager.c  wifi_manager.h
firmware/test/: test_battpct.c  test_fb2bpp.c  test_lowbatt.c  test_mqtt_parse.c  test_provision_form.c
server-plugin/devices/picpak_client/: device.json  device.py
server-plugin/renderers/esp32_bwry_bin/: renderer.json  renderer.py
tools/: gen_splash.py
